# erav4-s2-colour-palette-extractor

./: README.md  main.py  pyproject.toml
static/: index.html  script.js  style.css
