[project]
name = "color-palette-extractor"
version = "0.1.0"
description = "A simple AI application that extracts dominant colors from images using K-means clustering"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "Pillow>=10.0.1",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.2",
]

[tool.uv]
dev-dependencies = []